alt tags to image divs

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,35 +8,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
+
 <body>
     <div class="panels">
         <div class="panel panel1">
+            <span role="img" aria-label="snowy mountains"> </span>
             <p>Hey</p>
             <p>Let's</p>
             <p>Dance</p>
         </div>
         <div class="panel panel2">
+            <span role="img" aria-label="dock in water"> </span>
             <p>Give</p>
             <p>Take</p>
             <p>Receive</p>
         </div>
         <div class="panel panel3">
+            <span role="img" aria-label="woman hiking on grassy trail"> </span>
             <p>Experience</p>
             <p>It</p>
             <p>Today</p>
         </div>
         <div class="panel panel4">
+            <span role="img" aria-label="side profile of fox"> </span>
             <p>Give</p>
             <p>All</p>
             <p>You can</p>
         </div>
         <div class="panel panel5">
+            <span role="img" aria-label="country road in blue hue"> </span>
             <p>Life</p>
             <p>In</p>
             <p>Motion</p>
         </div>
     </div>
-        <script src="client.js"></script>
+    <script src="client.js"></script>
 
 </body>
+
 </html>
