--- a/index.html
+++ b/index.html
@@ -11,32 +11,32 @@
 
 <body>
     <div class="panels">
-        <div class="panel panel1">
-            <span role="img" aria-label="snowy mountains"> </span>
+        <div class="panel panel1" aria-label="snowy mountains">
+            <!-- <span role="img" aria-label="snowy mountains"> </span> -->
             <p>Hey</p>
             <p>Let's</p>
             <p>Dance</p>
         </div>
-        <div class="panel panel2">
-            <span role="img" aria-label="dock in water"> </span>
+        <div class="panel panel2" aria-label="dock in water">
+            <!-- <span role="img" aria-label="dock in water"> </span> -->
             <p>Give</p>
             <p>Take</p>
             <p>Receive</p>
         </div>
-        <div class="panel panel3">
-            <span role="img" aria-label="woman hiking on grassy trail"> </span>
+        <div class="panel panel3" aria-label="woman hiking on grassy trail">
+            <!-- <span role="img" aria-label="woman hiking on grassy trail"> </span> -->
             <p>Experience</p>
             <p>It</p>
             <p>Today</p>
         </div>
-        <div class="panel panel4">
-            <span role="img" aria-label="side profile of fox"> </span>
+        <div class="panel panel4" aria-label="side profile of fox">
+            <!-- <span role="img" aria-label="side profile of fox"> </span> -->
             <p>Give</p>
             <p>All</p>
             <p>You can</p>
         </div>
-        <div class="panel panel5">
-            <span role="img" aria-label="country road in blue hue"> </span>
+        <div class="panel panel5" aria-label="country road in blue hue">
+            <!-- <span role="img" aria-label="country road in blue hue"> </span> -->
             <p>Life</p>
             <p>In</p>
             <p>Motion</p>
